@@ -1,5 +1,7 @@
 Changes in version 1.6
 
+ - Added an ICollisionCallback to ISceneNodeAnimatorCollisionResponse, to inform the application that a collision has occured.  Thanks to garrittg for this.
+
  - Added an startPosition parameter to createFlyCircleAnimator() to allow starting the animator at any position on the circle.
 
  - Many uses of dimension2d<s32> changed to dimension2d<u32>, including IImage, ITexture and screen dimensions.  You will have to change (at least) createDevice() calls to use dimension2d<u32>
